testsuite/tests/grammar/invalid_lkt/invalid_main_rule_annot.lkt
import common
import lexer_example

@with_lexer(foo_lexer) grammar foo_grammar {
    @main_rule ("foo") main_rule <- Example("example")
}
